# Humanoids

./: .gitignore  README.md
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/install/hdwr_pkg/share/hdwr_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/hdwr_pkg/share/hdwr_pkg/cmake/: ament_cmake_export_include_directories-extras.cmake  export_hdwr_pkg__rosidl_generator_cExport-noconfig.cmake  export_hdwr_pkg__rosidl_typesupport_fastrtps_cExport.cmake  hdwr_pkgConfig.cmake  hdwr_pkg__rosidl_typesupport_cExport-noconfig.cmake  hdwr_pkg__rosidl_typesupport_cExport.cmake  hdwr_pkg__rosidl_typesupport_cppExport.cmake  hdwr_pkg__rosidl_typesupport_introspection_cExport.cmake  hdwr_pkg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros_ws/install/hdwr_pkg/share/hdwr_pkg/srv/: HumanSrv.srv  HumanSrv_Request.msg
ros_ws/install/humanoid_tools/include/humanoid_tools/: vision.hpp
ros_ws/install/humanoid_tools/share/humanoid_tools/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/humanoid_tools/share/humanoid_tools/cmake/: humanoid_toolsConfig.cmake
ros_ws/install/refbox_comm_node/share/refbox_comm_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/surge_et_ambula/share/surge_et_ambula/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/surge_et_ambula/share/surge_et_ambula/cmake/: surge_et_ambulaConfig.cmake
ros_ws/install/surge_et_ambula/share/surge_et_ambula/launch/: striker_launch.py
ros_ws/install/task_manager/lib/task_manager/: push_recovery  striker  striker_node
ros_ws/install/task_manager/share/task_manager/: local_setup.sh  package.dsv  package.ps1  package.sh
ros_ws/install/task_manager/share/task_manager/cmake/: task_managerConfig.cmake
ros_ws/install/vision_node/share/vision_node/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
ros_ws/install/vision_node/share/vision_node/cmake/: vision_nodeConfig.cmake
ros_ws/log/: latest_build
ros_ws/src/Hardware/hdwr_pkg/: CMakeLists.txt  package.xml
ros_ws/src/Hardware/hdwr_pkg/scripts/: test_sdk_node.py
ros_ws/src/Plan/task_manager/: CMakeLists.txt
ros_ws/src/Plan/task_manager/src/: push_recovery.cpp  striker.cpp
ros_ws/src/RefBoxComm/refbox_comm_node/: CMakeLists.txt
ros_ws/src/SurgeEtAmbula/surge_et_ambula/: CMakeLists.txt  package.xml
ros_ws/src/Vision/vision_node/: CMakeLists.txt  yolo_sim.py
ros_ws/src/humanoid_tools/: CMakeLists.txt
ros_ws/src/humanoid_tools/include/humanoid_tools/: hardware.hpp  vision.hpp
ros_ws/src/humanoid_tools/src/: hardware.cpp  vision.cpp
ros_ws/src/surge_et_ambula/: CMakeLists.txt  package.xml
(+12 files in other folders)
