<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>surge_et_ambula</name>
  <version>0.1.0</version>
  <description>Launch files for SM</description>
  <maintainer email="mercus.finix@gmail.com">Marco Soriano</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>task_manager</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>